# spyduster

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
docs/: api.md
search/: search_index.json
src/spydusclient/: __init__.py  availability.py  base.py  client.py  collection.py  old.py  record.py  utils.py
test/: test_availability.py  test_client.py  test_collection.py  test_record.py
