[project]
name = "spyduster"
version = "0.1.0"
description = "Web scraping client for the Spydus library system"
license = "GPL-3.0"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
    "pytest>=8.3.5",
]
